# tiny-image-finder

./: .gitignore  CMakeLists.txt  README.md  applicationcore.cpp  applicationcore.h  changelog.txt  imagecache.cpp  imagecache.h  imagefinder.cpp  imagefinder.h  imagemodel.cpp  imagemodel.h  imageprovider.cpp  imageprovider.h  logging.cpp  logging.h  main.cpp  paths.cpp  paths.h  settings.cpp  settings.h
i18n/: image-finder_nl.qm  image-finder_nl.ts  image-finder_ru.qm  image-finder_ru.ts  qt_ru.qm
i18n/nl.lproj/: locversion.plist
i18n/ru.lproj/: locversion.plist
package/: dev.levz.TinyImageFinder.desktop  dev.levz.TinyImageFinder.metainfo.xml
qml/: ImageView.qml  MainWindow.qml  SettingsView.qml
resources/: resource.qrc  win32_resource.rc
